# log-processing

./: .gitignore  LICENSE  README.md  processor.py  pyproject.toml
examples/firewall/: policy_analysis.py  port_scan_detection.py  top_talkers.py  traffic_map.py  traffic_timeline.py
examples/ssh/: brute_force_graph.py  brute_force_map.py
log_processing/analysis/: firewall.py  ip.py  login.py
log_processing/enrichment/: ip.py
log_processing/export/: timesketch.py
log_processing/source/firewall/: iptables.py
log_processing/visualization/: graph.py  map.py  timeline.py
src/analysis/: http.py  ip.py  login.py  ssh.py
src/enrichment/: ip.py
src/export/: timesketch.py
src/plugins/: geodesic.py
src/source/os/: http.py  ssh.py
src/source/velociraptor/: ssh.py
src/source/zeek/: conn.py  files.py  http.py  ssh.py
src/visualisation/: timeline.py
src/visualization/: graph.py  map.py  timeline.py
tools/: update-enrichment-data.py
