[project]
name = "log-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-geo-distance>=0.4.2",
    "folium>=0.19.2",
    "jaal>=0.1.7",
    "polars-domain-lookup>=0.2.1",
    "polars-maxminddb>=0.2.1",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "zat>=0.4.7",
]
